[gd_scene load_steps=20 format=4 uid="uid://gdglwyk35qax"]

[ext_resource type="Script" path="res://main/start_floor_1.gd" id="1_08a6g"]
[ext_resource type="Script" path="res://Scripts/camera_2d.gd" id="1_aq8g7"]
[ext_resource type="PackedScene" uid="uid://73xvh87ssiju" path="res://Player/Player.tscn" id="1_xthax"]
[ext_resource type="Texture2D" uid="uid://b87dhenfunxtf" path="res://assets/tower_tile1.png" id="2_2ecq8"]
[ext_resource type="Texture2D" uid="uid://1vpmmahv0617" path="res://assets/Tower-Tiles.png" id="3_btub3"]
[ext_resource type="Texture2D" uid="uid://21d23epjsgst" path="res://assets/Door.png" id="4_gpmjm"]
[ext_resource type="FontFile" uid="uid://82odygvbe8ns" path="res://assets/SlimeBox-GWMD.ttf" id="4_l561f"]
[ext_resource type="Texture2D" uid="uid://luofy5xxs7tm" path="res://assets/power_icon1.png" id="5_xyxby"]
[ext_resource type="PackedScene" uid="uid://d330nnjym1q4b" path="res://Pause_menu.tscn" id="9_g7508"]
[ext_resource type="Script" path="res://main/Stopwatch.gd" id="11_kb3g1"]
[ext_resource type="PackedScene" uid="uid://dag1cpcorbjat" path="res://Ending.tscn" id="13_37cqu"]
[ext_resource type="Script" path="res://Random_Gen/rand_gen.gd" id="14_6slis"]
[ext_resource type="PackedScene" uid="uid://cicobqfijtyqs" path="res://assets/sound/sfx_player.tscn" id="14_ncwhb"]

[sub_resource type="Gradient" id="Gradient_6e28p"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_f60od"]
gradient = SubResource("Gradient_6e28p")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_v3cr8"]
texture = ExtResource("2_2ecq8")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -16, 16, -11.75, 16, -12, -16)
0:0/0/physics_layer_0/polygon_1/points = PackedVector2Array(16, -16, 16, 16, 11.75, 16, 11.75, -16)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.875, -3.8125, 7.125, -3.9375, 7.125, 4.0625, -6.75, 4.0625)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -4.11006, 16, -4.02167, 16, 4.02167, -16, 4.02167)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -4.11006, 16, -4.02167, 16, 4.02167, -16, 3.93328)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, -7.9375, -16, -7.9375)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, -7.9375, -16, -7.9375)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, -8, -16, -8.125)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(11.875, -16, 11.75, -12.1875, 16, -12.0625, 16, -16)
2:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_irtct"]
texture = ExtResource("3_btub3")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, -8, -5.75, -8.25, -5.5, 2, -16, 2)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, -8, -16, -8)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 1.75, 6, 1.75, 6.25, -8.25, -16, -8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_uktg4"]
texture = ExtResource("4_gpmjm")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0

[sub_resource type="TileSet" id="TileSet_tsf08"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 7
sources/0 = SubResource("TileSetAtlasSource_v3cr8")
sources/1 = SubResource("TileSetAtlasSource_irtct")
sources/2 = SubResource("TileSetAtlasSource_uktg4")

[node name="LV1" type="Node2D"]
script = ExtResource("1_08a6g")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -10
offset_left = -2025.0
offset_top = -1454.0
offset_right = 2356.0
offset_bottom = 1156.0
texture = SubResource("GradientTexture1D_f60od")

[node name="Player" parent="." instance=ExtResource("1_xthax")]
position = Vector2(227, -98)

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 10
position = Vector2(240, -150)
zoom = Vector2(0.9, 0.9)
script = ExtResource("1_aq8g7")

[node name="Stopwatch" type="Label" parent="Camera2D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -136.0
offset_right = 15.0
offset_bottom = -126.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.992806, 1)
pivot_offset = Vector2(15.1087, 5)
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.682353, 0.466667, 0.32549, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("4_l561f")
theme_override_font_sizes/font_size = 10
text = "0.0000"
script = ExtResource("11_kb3g1")

[node name="Pause_menu" parent="Camera2D" instance=ExtResource("9_g7508")]
visible = false
offset_top = 6.0
offset_bottom = 6.0

[node name="power_ups" type="Node2D" parent="."]
z_index = 10
position = Vector2(240, -150)

[node name="dash_icon" type="Sprite2D" parent="power_ups"]
visible = false
position = Vector2(-245, -110)
texture = ExtResource("5_xyxby")
vframes = 4
frame = 3

[node name="Label" type="Label" parent="power_ups/dash_icon"]
offset_left = -18.0
offset_top = 3.0
offset_right = 22.0
offset_bottom = 26.0
theme_override_colors/font_color = Color(0.682353, 0.466667, 0.32549, 1)
theme_override_font_sizes/font_size = 10
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="power_ups/dash_icon"]
offset_left = -18.0
offset_top = -24.0
offset_right = 22.0
offset_bottom = -1.0
theme_override_colors/font_color = Color(0.682353, 0.466667, 0.32549, 1)
theme_override_font_sizes/font_size = 7
text = "Shift"
horizontal_alignment = 1
vertical_alignment = 1

[node name="djump_icon" type="Sprite2D" parent="power_ups"]
visible = false
position = Vector2(-245, -55)
texture = ExtResource("5_xyxby")
vframes = 4
frame = 2

[node name="Label" type="Label" parent="power_ups/djump_icon"]
offset_left = -18.0
offset_top = 5.0
offset_right = 22.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(0.682353, 0.466667, 0.32549, 1)
theme_override_font_sizes/font_size = 10
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="speed_icon" type="Sprite2D" parent="power_ups"]
visible = false
position = Vector2(-246, 55)
texture = ExtResource("5_xyxby")
vframes = 4

[node name="Label" type="Label" parent="power_ups/speed_icon"]
offset_left = -18.0
offset_top = 5.0
offset_right = 22.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(0.682353, 0.466667, 0.32549, 1)
theme_override_font_sizes/font_size = 10
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="wall_icon" type="Sprite2D" parent="power_ups"]
visible = false
position = Vector2(-245, 0)
texture = ExtResource("5_xyxby")
vframes = 4
frame = 1

[node name="Label" type="Label" parent="power_ups/wall_icon"]
offset_left = -18.0
offset_top = 5.0
offset_right = 22.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(0.682353, 0.466667, 0.32549, 1)
theme_override_font_sizes/font_size = 10
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="sfx_player" parent="." instance=ExtResource("14_ncwhb")]
unique_name_in_owner = true

[node name="Random_Gen" type="Node2D" parent="."]
script = ExtResource("14_6slis")

[node name="Tiles" type="TileMapLayer" parent="."]
position = Vector2(240, -150)
tile_map_data = PackedByteArray("AAD5////AQABAAEAAAD5//n/AQABAAEAAAD5//r/AQABAAEAAAD5//v/AQABAAEAAAD5//z/AQABAAEAAAD5//3/AQABAAEAAAD5//7/AQABAAEAAAD5/wAAAQABAAEAAAD5/wEAAQABAAEAAAD5/wIAAQABAAEAAAD5/wMAAQADAAEAAAAGAAIAAQABAAEAAAAGAAEAAQABAAEAAAAGAAAAAQABAAEAAAAGAP//AQABAAEAAAAGAP7/AQABAAEAAAAGAP3/AQABAAEAAAAGAPz/AQABAAEAAAAGAPv/AQABAAEAAAAGAPr/AQABAAEAAAAGAPn/AQABAAEAAAD6/wMAAQACAAEAAAD7/wMAAQACAAEAAAD8/wMAAQACAAEAAAD9/wMAAQACAAEAAAD+/wMAAQACAAEAAAD//wMAAQACAAEAAAAAAAMAAQACAAEAAAABAAMAAQACAAEAAAACAAMAAQACAAEAAAADAAMAAQACAAEAAAAEAAMAAQACAAEAAAAFAAMAAQACAAEAAAD5//T/AQABAAEAAAD5//X/AQABAAEAAAD5//b/AQABAAEAAAD5//f/AQABAAEAAAD5//j/AQABAAEAAAD5//D/AQABAAEAAAD5//H/AQABAAEAAAD5//L/AQABAAEAAAD5//P/AQABAAEAAAD5/+r/AQABAAEAAAD5/+v/AQABAAEAAAD5/+z/AQABAAEAAAD5/+3/AQABAAEAAAD5/+7/AQABAAEAAAD5/+//AQABAAEAAAD5/+P/AQABAAEAAAD5/+T/AQABAAEAAAD5/+X/AQABAAEAAAD5/+b/AQABAAEAAAD5/+f/AQABAAEAAAD5/+j/AQABAAEAAAD5/+n/AQABAAEAAAD5/9v/AQABAAEAAAD5/9z/AQABAAEAAAD5/93/AQABAAEAAAD5/97/AQABAAEAAAD5/9//AQABAAEAAAD5/+D/AQABAAEAAAD5/+H/AQABAAEAAAD5/+L/AQABAAEAAAAGAPL/AQABAAEAAAAGAPP/AQABAAEAAAAGAPT/AQABAAEAAAAGAPX/AQABAAEAAAAGAPb/AQABAAEAAAAGAPf/AQABAAEAAAAGAPj/AQABAAEAAAAGAOf/AQABAAEAAAAGAOj/AQABAAEAAAAGAOn/AQABAAEAAAAGAOr/AQABAAEAAAAGAOv/AQABAAEAAAAGAOz/AQABAAEAAAAGAO3/AQABAAEAAAAGAO7/AQABAAEAAAAGAO//AQABAAEAAAAGAPD/AQABAAEAAAAGAPH/AQABAAEAAAAGAN3/AQABAAEAAAAGAN7/AQABAAEAAAAGAN//AQABAAEAAAAGAOD/AQABAAEAAAAGAOH/AQABAAEAAAAGAOL/AQABAAEAAAAGAOP/AQABAAEAAAAGAOT/AQABAAEAAAAGAOX/AQABAAEAAAAGAOb/AQABAAEAAAAGANv/AQABAAEAAAAGANz/AQABAAEAAAAGAAMAAQACAAIAAAD5/9L/AQABAAEAAAD5/9P/AQABAAEAAAD5/9T/AQABAAEAAAD5/9X/AQABAAEAAAD5/9b/AQABAAEAAAD5/9f/AQABAAEAAAD5/9j/AQABAAEAAAD5/9n/AQABAAEAAAD5/9r/AQABAAEAAAD5/9H/AQABAAEAAAD5/9D/AQABAAEAAAD5/8//AQABAAEAAAAGANr/AQABAAEAAAAGANn/AQABAAEAAAAGANj/AQABAAEAAAAGANf/AQABAAEAAAAGANb/AQABAAEAAAAGANX/AQABAAEAAAAGANT/AQABAAEAAAAGANP/AQABAAEAAAAGANL/AQABAAEAAAAGANH/AQABAAEAAAAGAND/AQABAAEAAAAGAM//AQABAAEAAAAGAM7/AQABAAEAAAAGAM3/AQABAAEAAAAGAMz/AQABAAEAAAAGAMv/AQABAAEAAAAGAMr/AQABAAEAAAAGAMn/AQABAAEAAAAGAMj/AQABAAEAAAAGAMf/AQABAAEAAAAGAMb/AQABAAEAAAAGAMX/AQABAAEAAAAGAMT/AQABAAEAAAAGAMP/AQABAAEAAAAGAML/AQABAAEAAAAGAMH/AQABAAEAAAAGAMD/AQABAAEAAAAGAL//AQABAAEAAAAGAL7/AQABAAEAAAAGAL3/AQABAAEAAAAGALz/AQABAAEAAAAGALv/AQABAAEAAAAGALr/AQABAAEAAAAGALn/AQABAAEAAAAGALj/AQABAAEAAAAGALf/AQABAAEAAAD5/87/AQABAAEAAAD5/83/AQABAAEAAAD5/8z/AQABAAEAAAD5/8v/AQABAAEAAAD5/8r/AQABAAEAAAD5/8n/AQABAAEAAAD5/8j/AQABAAEAAAD5/8f/AQABAAEAAAD5/8b/AQABAAEAAAD5/8X/AQABAAEAAAD5/8T/AQABAAEAAAD5/8P/AQABAAEAAAD5/8L/AQABAAEAAAD5/8H/AQABAAEAAAD5/8D/AQABAAEAAAD5/7//AQABAAEAAAD5/77/AQABAAEAAAD5/73/AQABAAEAAAD5/7z/AQABAAEAAAD5/7v/AQABAAEAAAD5/7r/AQABAAEAAAD5/7n/AQABAAEAAAD5/7j/AQABAAEAAAD5/7f/AQABAAEAAAAGALb/AQABAAEAAAAGALX/AQABAAEAAAAGALT/AQABAAEAAAAGALP/AQABAAEAAAAGALL/AQABAAEAAAAGALH/AQABAAEAAAAGALD/AQABAAEAAAAGAK//AQABAAEAAAAGAK7/AQABAAEAAAAGAK3/AQABAAEAAAAGAKz/AQABAAEAAAAGAKv/AQABAAEAAAAGAKr/AQABAAEAAAAGAKn/AQABAAEAAAAGAKj/AQABAAEAAAAGAKf/AQABAAEAAAAGAKb/AQABAAEAAAAGAKX/AQABAAEAAAAGAKT/AQABAAEAAAAGAKP/AQABAAEAAAAGAKL/AQABAAEAAAAGAKH/AQABAAEAAAAGAKD/AQABAAEAAAAGAJ//AQABAAEAAAAGAJ7/AQABAAEAAAAGAJ3/AQABAAEAAAAGAJz/AQABAAEAAAAGAJv/AQABAAEAAAAGAJr/AQABAAEAAAAGAJn/AQABAAEAAAAGAJj/AQABAAEAAAAGAJf/AQABAAEAAAAGAJb/AQABAAEAAAAGAJX/AQABAAEAAAAGAJT/AQABAAEAAAAGAJP/AQABAAEAAAAGAJL/AQABAAEAAAAGAJH/AQABAAEAAAD5/7b/AQABAAEAAAD5/7X/AQABAAEAAAD5/7T/AQABAAEAAAD5/7P/AQABAAEAAAD5/7L/AQABAAEAAAD5/7H/AQABAAEAAAD5/7D/AQABAAEAAAD5/6//AQABAAEAAAD5/67/AQABAAEAAAD5/63/AQABAAEAAAD5/6z/AQABAAEAAAD5/6v/AQABAAEAAAD5/6r/AQABAAEAAAD5/6n/AQABAAEAAAD5/6j/AQABAAEAAAD5/6f/AQABAAEAAAD5/6b/AQABAAEAAAD5/6X/AQABAAEAAAD5/6T/AQABAAEAAAD5/6P/AQABAAEAAAD5/6L/AQABAAEAAAD5/6H/AQABAAEAAAD5/6D/AQABAAEAAAD5/5//AQABAAEAAAD5/57/AQABAAEAAAD5/53/AQABAAEAAAD5/5z/AQABAAEAAAD5/5v/AQABAAEAAAD5/5r/AQABAAEAAAD5/5n/AQABAAEAAAD5/5j/AQABAAEAAAD5/5f/AQABAAEAAAD5/5b/AQABAAEAAAD5/5X/AQABAAEAAAD5/5T/AQABAAEAAAD5/5P/AQABAAEAAAD5/5L/AQABAAEAAAD5/5H/AQABAAEAAAA=")
tile_set = SubResource("TileSet_tsf08")

[node name="Attempts" type="Label" parent="."]
z_index = 10
offset_left = 385.0
offset_top = -19.0
offset_right = 464.0
offset_bottom = -2.0
theme_override_colors/font_color = Color(0.682353, 0.466667, 0.32549, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("4_l561f")
text = "Attempt 0"

[node name="Ending" parent="." instance=ExtResource("13_37cqu")]
